Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-2663

lfsck: e2fsck [QUOTA WARNING] Usage inconsistent

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Blocker Blocker
    • Lustre 2.4.0
    • Lustre 2.4.0
    • 3
    • 6213

      This issue was created by maloo for liuying <emoly.liu@intel.com>

      This issue relates to the following test suite run: https://maloo.whamcloud.com/test_sets/ffe70358-644c-11e2-a1aa-52540035b04c.

      20:33:45:I/O read: 6MB, write: 0MB, rate: 17.00MB/s
      20:33:45: lfsck : @@@@@@ FAIL: e2fsck d -v -t -t -f -n --mdsdb /home/cgearing/.autotest/shared_dir/2013-01-21/201214-70220949137480/mdsdb --ostdb /home/cgearing/.autotest/shared_dir/2013-01-21/201214-70220949137480/ostdb-0 /dev/mapper/lvm-OSS-P1 returned 4, should be <= 1
      20:33:45: Trace dump:
      20:33:45: = /usr/lib64/lustre/tests/test-framework.sh:3975:error_noexit()
      20:33:45: = /usr/lib64/lustre/tests/test-framework.sh:3998:error()
      20:33:45: = /usr/lib64/lustre/tests/test-framework.sh:3481:run_e2fsck()
      20:33:45: = /usr/lib64/lustre/tests/test-framework.sh:3519:generate_db()
      20:33:45: = /usr/lib64/lustre/tests/lfsck.sh:259:main()

      The 3519:generate_db() in my code is

      3515     for node in $(osts_nodes); do
      3516         for dev in ${OSTDEVS[i]}; do
      3517             run_e2fsck $node $dev "-n --mdsdb $MDSDB --ostdb $OSTDB-$ostidx"
      3518             OSTDB_LIST="$OSTDB_LIST $OSTDB-$ostidx"
      3519             ostidx=$((ostidx + 1))
      3520         done
      3521         i=$((i + 1))
      

      But I didn't find anything obviously wrong.

            niu Niu Yawei (Inactive)
            maloo Maloo
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved: